src/util/bytes.h


typedef struct {
  bytes_t data;      
  int32_t allocated; 
} buffer_t;
size_t buffer_grow(buffer_t* buffer, size_t min_len);
#define bytes(ptr, length) \
  (bytes_t) { .data = (uint8_t*) ptr, .len = length }